# pcsx2-launcher

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-and-release.yml
src/: App.vue  main.ts  styles.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: games_db.json
src/assets/fonts/Lato/: stylesheet.css
src/assets/fonts/RobotoMono/: stylesheet.css
src/components/: GameCard.vue  GameImage.vue  Header.vue
src/components/Config/: PCSX2Flag.vue
src/helpers/: screen.ts
src/pages/: Config.vue  GameSettings.vue  Home.vue
src/stores/: Config.ts  Gamepad.ts  Games.ts
