[package]
name = "pcsx2-launcher"
version = "0.0.0"
description = "A PCSX2 games Launcher"
authors = ["elkhayder"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-read-file", "fs-exists", "fs-write-file", "dialog-message", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iso9660 = "0.1.1"
walkdir = "2.4.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
